$Date$

VEGAN RELEASE VERSIONS at http://cran.r-project.org/

Version 2.0-5 (opened June 18, 2012)

	* merge r2271: tweak varpart.Rd. (plot coloured circles).
	* merge r2267: tweak vegdist.Rd (ref to vegdist).
	* merge r2260: streamline adonis (internal changes).
	* merge r2258: protect betadisper against changes in R-devel API.
	* merge r2254: stylistic in examples of Rd files.
	* merge r2252,56,57,61,64,66: add density methods for vegan
	permutation functions and add plot.densityvegan to display these.
	* merge r2250: do not use paste0 in envift.Rd (fails in R 2.14).
	* merge r2249: fix vignette building with TeXLive 2012.
	* merge r2246: remove dead code from cIndexKM() and R-devel CMD
	check warning.
	* merge r2244: more portable doc/Makefile
	* merge r2237 thru 2240: add labels.envfit() and "labels" arg to
	plot.envfit(). 
	* merge r2227 thru 2235: adipart, hiersimu, multipart code
	refactoring (especially formula method) and making to inherit from
	oecosimu in printing the results.  The merge did not apply quite
	cleanly, but oecosimu, print.oecosimu and NAMESPACE needed manual
	editing (beware).
	* merge r2225: biplot.rda 'type' fix.

Version 2.0-4 (released June 18, 2012)

	* merge r2215: plot.envfit() gains args 'bg' for background colour
	of labels.
	* cherry-pick from r2213: warn on empty rows in simper (picked
	github revision cce42b3).
	* merge r2206,7: check 'newdata' dims in predict(..., type =
	"response"|"working") for CA results.
	* merge r2195-7, 2204: bias adjusted betadisper.
	* merge r2191-2193: standardise handling of 'select' arg in
	those plotting functions that support it. Adds non-exported
	function .checkSelect().
	* merge r2182,2182,2199,2201: FAQ about data size in NMDS.
	* merge r2178, 2180: ordipointlabel gains 'select' argument.
	* merge r2173-2176, 2185: ordihull labels, semintransparent
	colours in ordihull & ordiellipse.
	* merge r2172,2179,2181,2184,2186,2187: metaMDS warns about too
	good stress.