@@ -13,9 +13,10 @@
 
 }
 \usage{
-mantel(xdis, ydis, method="pearson", permutations=999, strata)
+mantel(xdis, ydis, method="pearson", permutations=999, strata,
+    na.rm = FALSE)
 mantel.partial(xdis, ydis, zdis, method = "pearson", permutations = 999, 
-    strata)
+    strata, na.rm = FALSE)
 }
 
 \arguments{
@@ -26,6 +27,10 @@ mantel.partial(xdis, ydis, zdis, method = "pearson", permutations = 999,
   \item{strata}{An integer vector or factor specifying the strata for
     permutation. If supplied, observations are permuted only within the
     specified strata.}
+  \item{na.rm}{Remove missing values in calculation of Mantel
+    correlation. Use this option with care: Permutation tests can
+    be biased, in particular if two matrices had missing values in
+    matching positions.}
 }
 \details{
   Mantel statistic is simply a correlation between entries of two
